--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
+.header {
+  padding: auto;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header-top {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  padding: 10px;
 }
-
-.App-link {
-  color: #61dafb;
+h1 {
+  margin-left: 30px;
+  font-size: 50px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.like-btn1 {
+  margin: 5px 15px 10px 30px;
+}
+.buttons {
+  gap: 10px;
+  display: flex;
+  height: 30px;
+  padding: 20px;
+}
+.header-bottom {
+  display: flex;
+  justify-content: space-between;
+  margin: 30px 50px;
+}
+.search {
+  height: 25px;
+  width: 220px;
+}
+.select {
+  height: 25px;
+  width: 220px;
+}
+.country-list {
+  display: inline-block;
+}
+.list-item {
+  background-color: rgb(185, 245, 73);
+  padding: 10px 5px;
+  border-radius: 10px;
+  width: 250px;
+  list-style: none;
+}
+h3 {
+  margin-left: 30px;
 }
